<resources>
    <string name="app_name">Toyota_united</string>

    <string name="user">User ID:</string>
    <string name="username">User Name:</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="companyid">Branch:</string>

    <string name="title_receive">ใบรับรถ</string>
    <string name="no_receive">เลขที่ใบส่งสินค้า</string>
    <string name="date_receive">วันที่ใบส่งสินค้า</string>


</resources>
