<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="volunteersofttech.arsa.toyata_united.ReceiveCar">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linBotton">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Receive Car"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="clickReceiveCar" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:onClick="clickCancelReceiveCar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linBotton"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_receive"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_receive"
                android:id="@+id/textView12"
                android:textSize="@dimen/h1_menu"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_receive"
                android:id="@+id/textView13"
                android:textSize="@dimen/h1_menu"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:textSize="@dimen/h1_menu"
                android:text="dd/MM/yyyy
                "
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Calendar"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:onClick="clickCalendar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Vin No"
                android:id="@+id/textView14"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Barcode"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:onClick="clickBarcodeVin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Kaludai"
                android:id="@+id/textView15"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Barcode"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:onClick="clickBarcodeKaludi" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView16"
                android:layout_weight="1"
                android:textSize="@dimen/h2_menu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView17"
                android:layout_weight="1"
                android:textSize="@dimen/h2_menu" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Map"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:onClick="clickMap" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
